--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -6,7 +6,7 @@
     "home": {
         "section1": {
             "header": "EINFACH GUTES NETZ.",
-            "description": "AirZen macht Schluss mit Funklöchern, Verbindungsabbrüchen und unsicheren Netzwerken. <br/><br/> Dank ausgeklügelter Mesh- Technologie halten sie ihr Zuhause immer im On. Internet für das Homeoffice und die ganze Familie, direkt vom Hersteller, so zuverlässig, sicher und einfach wie noch nie."
+            "description": "AirZen macht Schluss mit unsicheren Netzwerken und nervigen Verbindungsabbrüchen. Dank ausgeklügelter Mesh-Technologie halten sie ihr Zuhause immer im On. \n   Erleben Sie die neue Form der Internet Nutzung in ihrem Zuhause. AirZen ist vergleichbar eines Internet Betriebssystems, dass nicht nur den Standard für Sicherheit und Privatsphäre ihrer Daten neu definiert. "
         }
     }
 }
