--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,7 +6,7 @@
     "home": {
         "section1": {
             "header": "ZEN FOR YOUR HOME",
-            "description": "AirZen puts an end to dead spots, dropped connections and insecure networks.Thanks to sophisticated mesh technology, they always keep your home on. Internet for the home office and the whole family, directly from the manufacturer, more reliable, safer and easier than ever."
+            "description": "AirZen puts an end to insecure networks and annoying disconnections. Thanks to sophisticated mesh technology, they always keep your home on. \n   Experience the new form of Internet use in your home. AirZen is comparable to an Internet operating system that not only redefines the standard for security and privacy of your data."
         }
     }
 }
