--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -46,6 +46,14 @@
                 {
                     "title": "Aus Europa. Für Europa.",
                     "content": "AirZen stellt modernste Netzwerk Technologie in der Schweiz & Europa her. Sicheres WLAN – entwickelt für individuelle Anforderungen und mit hoher Anwenderfreundlichkeit. Der eigenen Herkunft verpflichtet, hilft AirZen allen Kunden dabei mit aktuellen Datenschutz- und Security-Richtlinien Schritt zu halten."
+                },
+                {
+                    "title": "Aus Europa. Für Europa.",
+                    "content": "AirZen stellt modernste Netzwerk Technologie in der Schweiz & Europa her. Sicheres WLAN – entwickelt für individuelle Anforderungen und mit hoher Anwenderfreundlichkeit. Der eigenen Herkunft verpflichtet, hilft AirZen allen Kunden dabei mit aktuellen Datenschutz- und Security-Richtlinien Schritt zu halten."
+                },
+                {
+                    "title": "Aus Europa. Für Europa.",
+                    "content": "AirZen stellt modernste Netzwerk Technologie in der Schweiz & Europa her. Sicheres WLAN – entwickelt für individuelle Anforderungen und mit hoher Anwenderfreundlichkeit. Der eigenen Herkunft verpflichtet, hilft AirZen allen Kunden dabei mit aktuellen Datenschutz- und Security-Richtlinien Schritt zu halten."
                 }
             ],
             "sparkle1": "Dieses Feature ermöglicht eine besondere Funktion: XYZ",
@@ -57,6 +65,14 @@
             "swiper": [
                 {
                     "title" : "Volksbank Köln/Bonn",
+                    "list": "WiFi für 30 Standorte \n 150 WLAN Router \n 700 Mitarbeiter \n Kunden-WLAN \n Managed Service"
+                },
+                {
+                    "title" : "Kreissparkasse Tuttlingen",
+                    "list": "WiFi für 30 Standorte \n 150 WLAN Router \n 700 Mitarbeiter \n Kunden-WLAN \n Managed Service"
+                },
+                {
+                    "title" : "IHK Schwarzwald-Baar-Heuberg",
                     "list": "WiFi für 30 Standorte \n 150 WLAN Router \n 700 Mitarbeiter \n Kunden-WLAN \n Managed Service"
                 }
             ]
@@ -93,7 +109,12 @@
             "_comment": "'Einfach' Abschnitt der Seite",
             "tip": "Einfach",
             "title": "entspannter geht nicht!",
-            "description": "Kühlschrank, Toaster und Playstation: Air Zen ist hochkompatibel. Updaten Sie ihr Heim-Netz mit minutenschneller Einrichtung. Alles was Sie dazu brauchen ist eine Internetverbindung. \n Und das Entspannteste daran: Es richtet sich fast wie von selbst ein, dank unserer Mesh Technologie. So reibungslos wie die Installation läuft dann auch die eigenständige Wartung und Verwaltung ab."
+            "description": "Kühlschrank, Toaster und Playstation: Air Zen ist hochkompatibel. Updaten Sie ihr Heim-Netz mit minutenschneller Einrichtung. Alles was Sie dazu brauchen ist eine Internetverbindung. \n Und das Entspannteste daran: Es richtet sich fast wie von selbst ein, dank unserer Mesh Technologie. So reibungslos wie die Installation läuft dann auch die eigenständige Wartung und Verwaltung ab.",
+            "list": [
+                "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf",
+                "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf",
+                "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf"
+            ]
         },
         "section5" : {
             "_comment": "'Technik' Abschnitt der Seite",
@@ -148,7 +169,12 @@
                 "description": "Wir berechnen dir eine einmalige Zahlung von 100€ für 4 Nodes. Außerdem werden wir monatlich über 24 Monate 68€ abbuchen.",
                 "info": "Wir garantieren Dir \n 30 Tage Rückgaberecht.",
                 "choose": "Bitte wähle deine Zahlungsmethode:",
-                "buttons": "Bank Transfer \n Kreditkarte \n SEPA-Lastschrift \n Ideal"
+                "buttons": [
+                    "Bank Transfer",
+                    "reditkarte",
+                    "SEPA-Lastschrift",
+                    "Ideal"
+                ]
             }
         }
     },
@@ -162,13 +188,32 @@
         "section2": {
             "_comment": "Abschnitt 'Professional Walan' der Seite",
             "title": "Profesionelles Wlan ",
-            "subtitle": "für Teams, Büros und Kunden"
+            "subtitle": "für Teams, Büros und Kunden",
+            "list": [
+                {
+                    "title": "Office & Teams",
+                    "items": "Zerotrust: individuelle Kennwörter \n Self-Service Portal für Mitarbeiter \n Managed Service & Live- Support per App, optional auch für Mitarbeiter"
+                },
+                {
+                    "title": "Homeoffice",
+                    "items": "Security im Home-Office: Seperate Business und Privat-Netze \n Plug & Play, keine  IT-Erfahrung nötig \n  Router-Set mit Mesh-Technologie"
+                },
+                {
+                    "title": "Kunden & Gäste WLAN",
+                    "items": "Marketing im Gäste WLAN per App konfigurierbar \n kontinuierlich Rechtssicher und DSGVO-Konform \n Individalisierbar nach Branche (Premium-WLAN, Gäste-WLAN uvm.)"
+                }
+            ]
         },
         "section3": {
             "_comment": "Abschnitt 'Zuverlässig' der Seite",
             "tip": "Zuverlässig",
             "title": "New Work, leicht gemacht!",
-            "description": "Nach dem Update ist vor dem Update. Gerade bei Home Office Lösungen ist ihr Netzwerk vielen Potentiellen Angriffen ausgesetzt. \n Um diesen Bedrohungen immer einen Schritt voraus zu sein, ist unsere Platform an ein Lizensmodell gekoppelt. Das schließt zahlreiche Sicherheitsfeatures ein, von denen Sie kaum etwas bemerken werden:"
+            "description": "Nach dem Update ist vor dem Update. Gerade bei Home Office Lösungen ist ihr Netzwerk vielen Potentiellen Angriffen ausgesetzt. \n Um diesen Bedrohungen immer einen Schritt voraus zu sein, ist unsere Platform an ein Lizensmodell gekoppelt. Das schließt zahlreiche Sicherheitsfeatures ein, von denen Sie kaum etwas bemerken werden:",
+            "list": [
+                "Zero Trust Konzept \n Je Mitarbeiter ein Kennwort",
+                "Live Protection \n c",
+                "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf"
+            ]
         },
         "section4": {
             "_comment": "Abschnitt 'Einfach' der Seite",
@@ -180,11 +225,33 @@
             "_comment": "Abschnitt 'Sicher' der Seite",
             "tip": "Sicher",
             "title": "Mit Sicherheit sicher!",
-            "description": "Ein sicherer Zugang auf zentrale Firmen-Ressourcen ist wesentlich, um im Großraum- büro, Coworking Space oder Zuhause zu arbeiten. wir bieten einzelne Kennwörter im Sinne von Zero Trust, automatische Rechtebeschränkungen für neue Devises, und ermöglichen Ihnen dennoch volle Konnektivität für all Ihre digitalen Abenteuer. \n So arbeiten Sie und ihr Team überall zu den Sicherheitsrichtlinien Ihres Unternehmens, selbst vom Sofa aus."
+            "description": "Ein sicherer Zugang auf zentrale Firmen-Ressourcen ist wesentlich, um im Großraum- büro, Coworking Space oder Zuhause zu arbeiten. wir bieten einzelne Kennwörter im Sinne von Zero Trust, automatische Rechtebeschränkungen für neue Devises, und ermöglichen Ihnen dennoch volle Konnektivität für all Ihre digitalen Abenteuer. \n So arbeiten Sie und ihr Team überall zu den Sicherheitsrichtlinien Ihres Unternehmens, selbst vom Sofa aus.",
+            "list": [
+                "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf",
+                "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf",
+                "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf"
+            ]
         },
         "section6": {
             "_comment": "Abschnitt '360°' der Seite",
-            "title": "360° Lösung für Unternehmen"
+            "title": "360° Lösung für Unternehmen",
+            "swiper": [
+                [
+                    "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf",
+                    "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf",
+                    "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf"
+                ],
+                [
+                    "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf",
+                    "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf",
+                    "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf"
+                ],
+                [
+                    "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf",
+                    "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf",
+                    "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf"
+                ]
+            ]
         },
         "section7": {
             "_comment": "Abschnitt 'Unsere Nodes' der Seite",
@@ -195,7 +262,27 @@
         "section8": {
             "_comment": "Abschnitt 'Whitepaper' der Seite",
             "title": "Whitepaper",
-            "subtitle": "Hier finden Sie tiefer gehende Informationen zu unserem Service."
+            "subtitle": "Hier finden Sie tiefer gehende Informationen zu unserem Service.",
+            "paperList": [
+                {
+                    "tip": "Whitepaper",
+                    "title": "Home-Office für alle",
+                    "description": "Ob groß oder klein: AirZen bietet vielfältige, individuelle Netzwerklösungen für Ihr Home-Office. Für weitere Infos zu unseren Services und Hardfacts werfen Sie einen Blick in unser Whitepaper.",
+                    "button": "PDF herunterladen"
+                },
+                {
+                    "tip": "Whitepaper",
+                    "title": "Home-Office für alle",
+                    "description": "Ob groß oder klein: AirZen bietet vielfältige, individuelle Netzwerklösungen für Ihr Home-Office. Für weitere Infos zu unseren Services und Hardfacts werfen Sie einen Blick in unser Whitepaper.",
+                    "button": "PDF herunterladen"
+                },
+                {
+                    "tip": "Whitepaper",
+                    "title": "Home-Office für alle",
+                    "description": "Ob groß oder klein: AirZen bietet vielfältige, individuelle Netzwerklösungen für Ihr Home-Office. Für weitere Infos zu unseren Services und Hardfacts werfen Sie einen Blick in unser Whitepaper.",
+                    "button": "PDF herunterladen"
+                }
+            ]
         },
         "form": {
             "step1": {
@@ -219,7 +306,12 @@
             "_comment":"'Zuverlässig' Abschnitt der Seite",
             "tip": "Zuverlässig",
             "title": "Klassenzimmer digital!",
-            "description": "AirZen hat die Komplettlösung für komplexe Anforderungen von Schulen jeder Art und Größe – und ist dabei kinderleicht zu bedienen. \n Neben lückenloser WLAN-Abdeckung sorgt AirZen auch für eine zuverlässige Netzstabilität, auch wenn viele Geräte online sind. Administratoren können unkompliziert Zugänge ermöglichen und mobil verwalten - ganz einfach vom Handy aus. \n Dazu braucht es keine ITSchulung, denn die Bedienung funktioniert ganz intuitiv über die App. Mit AirZen sorgen Sie für ein erst- klassiges Netz in ihrer Schule."
+            "description": "AirZen hat die Komplettlösung für komplexe Anforderungen von Schulen jeder Art und Größe – und ist dabei kinderleicht zu bedienen. \n Neben lückenloser WLAN-Abdeckung sorgt AirZen auch für eine zuverlässige Netzstabilität, auch wenn viele Geräte online sind. Administratoren können unkompliziert Zugänge ermöglichen und mobil verwalten - ganz einfach vom Handy aus. \n Dazu braucht es keine ITSchulung, denn die Bedienung funktioniert ganz intuitiv über die App. Mit AirZen sorgen Sie für ein erst- klassiges Netz in ihrer Schule.",
+            "list": [
+                "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf",
+                "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf",
+                "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf"
+            ]
         },
         "section3": {
             "_comment":"'Sicher'Abschnitt der Seite",
@@ -288,5 +380,27 @@
         "placeholder": "Bitte beschreiben Sie Ihr Projekt mit einigen Eckdaten. Wir melden uns umgehend bei Ihnen.",
         "GDPR": "DSGVO Copy",
         "button": "Senden"
-    } 
+    },
+    "footer" : {
+        "title": "Impressum",
+        "inprint": [{
+            "title": "AirZen Networks Lda.",
+            "description": "Avenida Arriaga, nº30, 1ºA \n 9000-064 Funchal, Portugal",
+            "subdes": "VAT: PT516672169"
+        }],
+        "readmore": [
+            {
+                "title": "Haftungsbeschränkung",
+                "content": "Die Inhalte dieser Website werden mit größtmöglicher Sorgfalt erstellt. Der Anbieter übernimmt jedoch keine Gewähr für die Richtigkeit, Vollständigkeit und Aktualität der bereitgestellten Inhalte. Die Nutzung der Inhalte der Website erfolgt auf eigene Gefahr des Nutzers. Namentlich gekennzeichnete Beiträge geben die Meinung des jeweiligen Autors und nicht immer die Meinung des Anbieters wieder. Mit der reinen Nutzung der Website des Anbieters kommt keinerlei Vertragsverhältnis zwischen dem Nutzer und dem Anbieter zustande."
+            },
+            {
+                "title": "Externe Links",
+                "content": "Diese Website enthält Verknüpfungen zu Websites Dritter ('externe Links'). Diese Websites unterliegen der Haftung der jeweiligen Betreiber. Der Anbieter hat bei der erstmaligen Verknüpfung der externen Links die fremden Inhalte daraufhin überprüft, ob etwaige Rechtsverstöße bestehen. Zu dem Zeitpunkt waren keine Rechtsverstöße ersichtlich. Der Anbieter hat keinerlei Einfluss auf die aktuelle und zukünftige Gestaltung und auf die Inhalte der verknüpften Seiten. Das Setzen von externen Links bedeutet nicht, dass sich der Anbieter die hinter dem Verweis oder Link liegenden Inhalte zu Eigen macht. Eine ständige Kontrolle der externen Links ist für den Anbieter ohne konkrete Hinweise auf Rechtsverstöße nicht zumutbar. Bei Kenntnis von Rechtsverstößen werden jedoch derartige externe Links unverzüglich gelöscht."
+            },
+            {
+                "title": "Urheber- und Leistungsschutzrechte",
+                "content": "Die auf dieser Website veröffentlichten Inhalte unterliegen dem deutschen Urheber- und Leistungsschutzrecht. Jede vom deutschen Urheber- und Leistungsschutzrecht nicht zugelassene Verwertung bedarf der vorherigen schriftlichen Zustimmung des Anbieters oder jeweiligen Rechteinhabers. Dies gilt insbesondere für Vervielfältigung, Bearbeitung, Übersetzung, Einspeicherung, Verarbeitung bzw. Wiedergabe von Inhalten in Datenbanken oder anderen elektronischen Medien und Systemen. Inhalte und Rechte Dritter sind dabei als solche gekennzeichnet. Die unerlaubte Vervielfältigung oder Weitergabe einzelner Inhalte oder kompletter Seiten ist nicht gestattet und strafbar. Lediglich die Herstellung von Kopien und Downloads für den persönlichen, privaten und nicht kommerziellen Gebrauch ist erlaubt. Die Darstellung dieser Website in fremden Frames ist nur mit schriftlicher Erlaubnis zulässig."
+            }
+        ]
+    }
 }
