multi language demo

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -16,25 +16,25 @@
                     "title": "Home",
                     "subtitle": "Für ein smartes Zuhause.",
                     "description" : "Störungsfreies und selbstoptimierendes Netz. Zuhause wie beim Profi.",
-                    "list": "Hochstabile Verbindung \n Keine Erfahrung nötig \n Automatische Updates \n Videosupport"
+                    "list": "Highly stable connection \n No experience required \n Automatic updates \n Video support"
                 },
                {
                     "title": "Business",
-                    "subtitle": "Für ein smartes Zuhause.",
+                    "subtitle": "For a connected company.",
                     "description" : "Störungsfreies und selbstoptimierendes Netz. Zuhause wie beim Profi.",
-                    "list": "Hochstabile Verbindung \n Keine Erfahrung nötig \n Automatische Updates \n Videosupport"
+                    "list": "Highly stable connection \n No experience required \n Automatic updates \n Video support"
                 },
                 {
-                    "title": "Home",
-                    "subtitle": "Für ein smartes Zuhause.",
+                    "title": "Education",
+                    "subtitle": "For a digital future.",
                     "description" : "Störungsfreies und selbstoptimierendes Netz. Zuhause wie beim Profi.",
-                    "list": "Hochstabile Verbindung \n Keine Erfahrung nötig \n Automatische Updates \n Videosupport"
+                    "list": "Highly stable connection \n No experience required \n Automatic updates \n Video support"
                 },
                {
-                    "title": "Home",
-                    "subtitle": "Für ein smartes Zuhause.",
+                    "title": "Industrial",
+                    "subtitle": "For digital progress.",
                     "description" : "Störungsfreies und selbstoptimierendes Netz. Zuhause wie beim Profi.",
-                    "list": "Hochstabile Verbindung \n Keine Erfahrung nötig \n Automatische Updates \n Videosupport"
+                    "list": "Highly stable connection \n No experience required \n Automatic updates \n Video support"
                 }
             ],
             "solution": "Unsere Lösung"
