--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -18,21 +18,21 @@
                     "description" : "Trouble-free and self-optimizing network. At home like a professional.",
                     "list": "Highly stable connection \n No experience required \n Automatic updates \n Video support"
                 },
-                {
+               {
                     "title": "Business",
-                    "subtitle": "For a smart home.",
+                    "subtitle": "For a connected company.",
                     "description" : "Trouble-free and self-optimizing network. At home like a professional.",
                     "list": "Highly stable connection \n No experience required \n Automatic updates \n Video support"
                 },
                 {
-                    "title": "Home",
-                    "subtitle": "For a smart home.",
+                    "title": "Education",
+                    "subtitle": "For a digital future.",
                     "description" : "Trouble-free and self-optimizing network. At home like a professional.",
                     "list": "Highly stable connection \n No experience required \n Automatic updates \n Video support"
                 },
-                {
-                    "title": "Home",
-                    "subtitle": "For a smart home.",
+               {
+                    "title": "Industrial",
+                    "subtitle": "For digital progress.",
                     "description" : "Trouble-free and self-optimizing network. At home like a professional.",
                     "list": "Highly stable connection \n No experience required \n Automatic updates \n Video support"
                 }
